# ARQ-2

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_gui.py  run_terminal.py
.github/workflows/: python-tests.yml
mesif_simulator/: __init__.py  __main__.py
src/mesif_simulator/: gui.py  simulator.py
tests/: test_simulator.py
